# ingenii-quantum-hybrid-networks

./: .env-dist  .gitignore  .pypirc-dist  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
examples/: hybrid_2D_CNN.ipynb  hybrid_3D_CNN.ipynb  hybrid_fully_connected.ipynb  quantum_edge_detection.ipynb  quantum_fusion_model.ipynb
examples/data/: core_test_fc6.npy  data_reader.py  general_train_fc10.npy  general_val_fc10.npy  pbdbind2016_core_test_3dnn.csv  pbdbind2020_refined_val_3dnn.csv  refined_train.csv  refined_train_fc10.npy  refined_train_fc6.npy  refined_val.csv  refined_val_fc6.npy
ingenii_hybrid_networks/examples/: Quantum_Edge_Detection_example.ipynb  gates_list2D.pickle  hybrid2DCNN_example.ipynb  hybrid3DCNN_example.ipynb
ingenii_hybrid_networks/functions/: quantum_layer3D.py
ingenii_quantum/examples/: hybrid_2D_CNN.ipynb  hybrid_3D_CNN.ipynb  hybrid_fully_connected.ipynb  quantum_edge_detection.ipynb  quantum_fusion_model.ipynb  quantum_inspired_filter.ipynb
ingenii_quantum/hybrid_networks/: edge_detection.py  filters.py  layers.py  qinsp_filter.py  utils.py
ingenii_quantum_hybrid_networks/examples/: Hybrid_FC_example.ipynb  Quantum_Edge_Detection_example.ipynb  U.pickle  gates_list.pickle  hybrid2DCNN_example.ipynb  hybrid3DCNN_example.ipynb  hybrid_2D_CNN.ipynb  hybrid_3D_CNN.ipynb  hybrid_fully_connected.ipynb  quantum_edge_detection.ipynb  qubits_list.pickle  qubits_list2D.pickle
ingenii_quantum_hybrid_networks/functions/: edge_detection.py  filters.py  layers.py  quantum_CNNlayer2D.py  (+5 more)
(+8 files in other folders)
