[metadata]
name = ingenii_quantum_hybrid_networks
url = TBA
author = Ingenii
author_email = laia@ingenii.dev
description = Hybrid quantum-classical neural networks for 2D and 3D image processing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: Restricted
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true

[options.packages.find]
