[metadata]
name = ingenii_quantum_hybrid_networks
url = https://github.com/ingenii-solutions/ingenii-quantum-hybrid-networks
author = Ingenii
author_email = laia@ingenii.dev
description = Hybrid quantum-classical neural networks for 2D and 3D image processing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true

[options.packages.find]

[options.package_data]
ingenii_quantum = examples/*, examples/**/*
